<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createDeck.anki.NewDeckAnkiFragment" >


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Título"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDecricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="24dp"
        android:text="Descrição"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTituloAnki"
            android:layout_width="378dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:hint="Matématica Básica"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.424"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
            app:layout_constraintVertical_bias="0.0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDesc"
        android:layout_width="368dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDecricao"
        app:layout_constraintVertical_bias="0.012">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescricaoAnki"
            android:layout_width="377dp"
            android:layout_height="111dp"
            android:layout_marginTop="8dp"
            android:hint="Deck para revisão da prova de matématica semana do mes que vem!"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDecricao" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxDeckPublicoAnki"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:text="Deck Público"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDesc"
        app:layout_constraintVertical_bias="0.057" />

    <CheckBox
        android:id="@+id/checkBoxDeckDuplicavel"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_marginBottom="268dp"
        android:text="Deck Duplicável"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDeckPublicoAnki"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/buttonCriarDeckAnki"
        android:layout_width="237dp"
        android:layout_height="72dp"
        android:text="Criar Deck AnkI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDeckDuplicavel"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>