<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="New Deck" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/baseline_query_stats_24"
        android:title="Statistics" />

</menu>