...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/buttonManualCreation"
        android:layout_width="253dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="Manualmente"
        app:layout_constraintBottom_toBottomOf="parent"
...
